fix: diff conflict actions spacing

--- a/frontend/src/style/_diffs.scss
+++ b/frontend/src/style/_diffs.scss
@@ -26,5 +26,9 @@
     .btn {
       height: 2.5rem;
     }
+
+    &--conflict {
+      padding: 0.5rem 1rem;
+    }
   }
 }
